@@ -22,12 +22,13 @@ analyzeFolder(myfolder, htmlPlots = TRUE, verbose = TRUE,
   snakeStep = 0.05, snakePlot = FALSE, smooth = 1,
   smoothVars = c("pitch", "dom"), summary = TRUE,
   summaryStats = c("mean", "median", "sd"), plot = FALSE,
-  savePlots = FALSE, savePath = NA, plotSpec = TRUE,
-  specPlot = NULL, pitchPlot = list(col = rgb(0, 0, 1, 0.75), lwd = 3),
-  candPlot = list(levels = c("autocor", "spec", "dom", "cep"), col =
-  c("green", "red", "orange", "violet"), pch = c(16, 2, 3, 7), cex = 2),
-  ylim = NULL, xlab = "Time, ms", ylab = "kHz", main = NULL,
-  width = 900, height = 500, units = "px", res = NA, ...)
+  showLegend = TRUE, savePlots = FALSE, savePath = NA,
+  plotSpec = TRUE, specPlot = NULL, pitchPlot = list(col = rgb(0, 0,
+  1, 0.75), lwd = 3), candPlot = list(levels = c("autocor", "spec",
+  "dom", "cep"), col = c("green", "red", "orange", "violet"), pch = c(16,
+  2, 3, 7), cex = 2), ylim = NULL, xlab = "Time, ms", ylab = "kHz",
+  main = NULL, width = 900, height = 500, units = "px", res = NA,
+  ...)
 }
 \arguments{
 \item{myfolder}{full path to target folder}
@@ -212,7 +213,9 @@ acoustic characteristic}
 
 \item{plot}{if TRUE, produces a spectrogram with pitch contour overlaid}
 
-\item{savePlots}{if TRUE, saves plots as .jpg files}
+\item{showLegend}{if TRUE, adds a legend with pitch tracking methods}
+
+\item{savePlots}{if TRUE, saves plots as .png files}
 
 \item{savePath}{if a valid path is specified, a plot is saved in this folder
 (defaults to NA)}
@@ -238,16 +241,16 @@ individual pitch candidates. Set to \code{NULL} or \code{NA} to suppress}
 \item{main}{plotting parameters}
 
 \item{width}{parameters passed to
-\code{\link[grDevices]{jpeg}} if the plot is saved}
+\code{\link[grDevices]{png}} if the plot is saved}
 
 \item{height}{parameters passed to
-\code{\link[grDevices]{jpeg}} if the plot is saved}
+\code{\link[grDevices]{png}} if the plot is saved}
 
 \item{units}{parameters passed to
-\code{\link[grDevices]{jpeg}} if the plot is saved}
+\code{\link[grDevices]{png}} if the plot is saved}
 
 \item{res}{parameters passed to
-\code{\link[grDevices]{jpeg}} if the plot is saved}
+\code{\link[grDevices]{png}} if the plot is saved}
 
 \item{...}{other graphical parameters passed to \code{\link{spectrogram}}}
 }
